Trying to avoid overlaps.

--- a/public/stylesheets/src/poem/global.less
+++ b/public/stylesheets/src/poem/global.less
@@ -13,5 +13,5 @@
 }
 
 .main {
-  margin-left: 260px;
+  margin-left: 320px;
 }
