--- a/public/stylesheets/src/poem/info.less
+++ b/public/stylesheets/src/poem/info.less
@@ -7,6 +7,7 @@
 
   line-height: 1.1;
   font-size: 2em;
+  font-weight: 200;
 
   .percent {
     font-size: 5em;
