--- a/public/stylesheets/src/poem/line.less
+++ b/public/stylesheets/src/poem/line.less
@@ -13,8 +13,9 @@
     left: 0;
 
     text {
-      font-size: 2em;
+
       font-weight: bold;
+
       &.positive {
         fill: @positive;
       }
@@ -24,10 +25,13 @@
       &.blocked {
         fill: @preview;
       }
+
     }
 
     line {
+
       stroke-width: 4;
+
       &.positive {
         stroke: @positive;
       }
@@ -37,6 +41,7 @@
       &.blocked {
         stroke: @preview;
       }
+
     }
 
   }
