--- a/public/stylesheets/src/poem/log.less
+++ b/public/stylesheets/src/poem/log.less
@@ -26,7 +26,7 @@
   .primary {
 
     direction: rtl;
-    width: 230px;
+    width: 280px;
 
     &.frozen .word {
       opacity: 0.5;
@@ -35,7 +35,7 @@
   }
 
   .overflow {
-    left: 520px;
+    left: 540px;
     opacity: 0.3;
   }
 
