--- a/public/stylesheets/src/poem/poem.less
+++ b/public/stylesheets/src/poem/poem.less
@@ -17,7 +17,7 @@
     background: darken(white, 10%);
     outline: none;
     padding: 5px;
-    width: 140px;
+    width: 120px;
   }
 
 }
