--- a/public/stylesheets/src/poem/vars.less
+++ b/public/stylesheets/src/poem/vars.less
@@ -1,8 +1,7 @@
 
 
 // Typography:
-@font-family-sans-serif: brandon-grotesque, "Helvetica Neue", sans-serif;
-@font-size-base: 16px;
+@font-family-sans-serif: Lato, "Helvetica Neue", sans-serif;
 
 // Colors:
 @positive: #08C;
